--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,7 @@ application {
 }
 
 shadowJar {
-    archiveBaseName = "duke"
-    archiveClassifier = null
+    archiveFileName = 'ekko.jar'
 }
 
 run{
